src/test/resources/invalid_tests/InvalidRepeatOutput.cnna
architecture InvalidRepeatOutput{
    def input in
    def output out

    in ->
    repeat 3{
        fullyConnected(units=64)
        output{
            fullyConnected()
            activation.softmax()
        } -> out
    }
}